Fix #2 z-index issues with "Classic"

--- a/demo/behaviors/classic.css
+++ b/demo/behaviors/classic.css
@@ -1,8 +1,10 @@
 .fly__label--classic {
   opacity: 0;
   top: 2em;
+  z-index: -1;
 }
 .fly__label--classic.fly__label--active {
   opacity: 1;
   top: 1em;
+  z-index: 1;
 }
